@@ -2,6 +2,7 @@ Revision history for Mojolicious-Plugin-LinkEmbedder
 
 0.11
        * Fix Video::Dbtv iframe src
+       * Fix handling https://www.youtube.com/user/jsconfeu
 
 0.10     Fri Oct 17 14:07:37 2014
        * Add LinkEmbedder::Text::Github
